// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@nx/nuxt/plugin not root project should create nodes 1`] = `
{
  "projects": {
    "my-app": {
      "root": "my-app",
      "targets": {
        "build-something": {
          "cache": true,
          "command": "nuxi build",
          "dependsOn": [
            "^build-something",
          ],
          "inputs": [
            "default",
            "^production",
            {
              "externalDependencies": [
                "nuxi",
              ],
            },
          ],
          "options": {
            "cwd": "my-app",
          },
          "outputs": [
            "{options.outputPath}",
          ],
        },
        "my-serve": {
          "command": "nuxi dev",
          "options": {
            "cwd": "my-app",
          },
        },
        "test": {
          "cache": true,
          "command": "vitest run",
          "inputs": [
            "default",
            "^production",
            {
              "externalDependencies": [
                "vitest",
              ],
            },
          ],
          "options": {
            "cwd": "my-app",
          },
          "outputs": [
            "{options.reportsDirectory}",
            "{workspaceRoot}/coverage/my-app",
          ],
        },
      },
    },
  },
}
`;

exports[`@nx/nuxt/plugin root project should create nodes 1`] = `
{
  "projects": {
    ".": {
      "root": ".",
      "targets": {
        "build": {
          "cache": true,
          "command": "nuxi build",
          "dependsOn": [
            "^build",
          ],
          "inputs": [
            "default",
            "^production",
            {
              "externalDependencies": [
                "nuxi",
              ],
            },
          ],
          "options": {
            "cwd": ".",
          },
          "outputs": [
            "{options.outputPath}",
          ],
        },
        "serve": {
          "command": "nuxi dev",
          "options": {
            "cwd": ".",
          },
        },
        "test": {
          "cache": true,
          "command": "vitest run",
          "inputs": [
            "default",
            "^production",
            {
              "externalDependencies": [
                "vitest",
              ],
            },
          ],
          "options": {
            "cwd": ".",
          },
          "outputs": [
            "{options.reportsDirectory}",
            "{projectRoot}/coverage",
          ],
        },
      },
    },
  },
}
`;
